oss-knowledge-gitops/backend/intent-classifier/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: intent-classifier
spec:
    rules:
        - host: oss-knowledge-intent-classifier-dev.4.230.158.187.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: dev-intent-classifier
                            port:
                                number: 8001
